Bug 1008723 - Even while a context menu is open for an bookmark item on a popup, bookmark menus shouldn't be closed by a right click on one of them. r=enndeakin, a=sledru